--- a/no-supervisado/IEEE/resultados/analisis_resultados.ipynb
+++ b/no-supervisado/IEEE/resultados/analisis_resultados.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -31,10 +31,10 @@
       "  uname: Linux 6.8.0-45-generic #45~22.04.1-Ubuntu SMP PREEMPT_DYNAMIC Wed Sep 11 15:25:05 UTC 2 x86_64 x86_64\n",
       "  CPU: 13th Gen Intel(R) Core(TM) i5-13400F: \n",
       "                 speed         user         nice          sys         idle          irq\n",
-      "       #1-16  4623 MHz     119313 s         29 s      15046 s   44188529 s          0 s\n",
-      "  Memory: 62.63290023803711 GB (46584.16796875 MB free)\n",
-      "  Uptime: 277052.02 sec\n",
-      "  Load Avg:  0.43  0.38  0.23\n",
+      "       #1-16  4607 MHz     165696 s         59 s      17751 s   97094905 s          0 s\n",
+      "  Memory: 62.63290023803711 GB (46062.7421875 MB free)\n",
+      "  Uptime: 608048.65 sec\n",
+      "  Load Avg:  0.48  0.86  0.83\n",
       "  WORD_SIZE: 64\n",
       "  LIBM: libopenlibm\n",
       "  LLVM: libLLVM-13.0.1 (ORCJIT, goldmont)\n",
@@ -102,32 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "metadata": {}
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "GNNUnsupervised(\n",
-       "  (convs): ModuleList(\n",
-       "    (0): TAGConv(3, 128, K=1)\n",
-       "    (1-2): 2 x TAGConv(128, 128, K=1)\n",
-       "    (3): TAGConv(128, 4, K=1)\n",
-       "  )\n",
-       "  (batchnorm): ModuleList(\n",
-       "    (0-2): 3 x BatchNorm(15104)\n",
-       "    (3): BatchNorm(472)\n",
-       "  )\n",
-       "  (dropout): Dropout(p=0.010876351654157568, inplace=False)\n",
-       "  (relu): LeakyReLU(negative_slope=0.01)\n",
-       ")"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/red118/train/input.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 33\u001b[0m\n\u001b[1;32m     29\u001b[0m min_vector, max_vector \u001b[38;5;241m=\u001b[39m get_max_min_values(net,device)\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Levantar Datos\u001b[39;00m\n\u001b[0;32m---> 33\u001b[0m train_loader, val_loader, test_loader, norm_x \u001b[38;5;241m=\u001b[39m \u001b[43mload_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraining\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnormalize_X\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcfg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mred\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m# train_loader, val_loader, test_loader = load_data(cfg.data.data_path, cfg.training.batch_size, False, cfg.data.red,device)\u001b[39;00m\n\u001b[1;32m     34\u001b[0m train_loader_unorm, val_loader_unorm, test_loader_unorm, _ \u001b[38;5;241m=\u001b[39m load_data(cfg\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mdata_path, cfg\u001b[38;5;241m.\u001b[39mtraining\u001b[38;5;241m.\u001b[39mbatch_size, \u001b[38;5;28;01mFalse\u001b[39;00m, cfg\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mred,device)\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m# Levantar predictor\u001b[39;00m\n",
+      "File \u001b[0;32m~/DORAA-UY/no-supervisado/IEEE/entrenamiento/src/Data_loader.py:72\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m(data_path, batch_size, normalize_X, red, device)\u001b[0m\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_data\u001b[39m(data_path, batch_size, normalize_X, red, device):\n\u001b[0;32m---> 72\u001b[0m     X_tensor_train \u001b[38;5;241m=\u001b[39m (torch\u001b[38;5;241m.\u001b[39mTensor(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_path\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/red\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mred\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/train/input.npy\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m ) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)        \n\u001b[1;32m     73\u001b[0m     X_tensor_val \u001b[38;5;241m=\u001b[39m (torch\u001b[38;5;241m.\u001b[39mTensor(np\u001b[38;5;241m.\u001b[39mload(data_path\u001b[38;5;241m+\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/red\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mred\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/val/input.npy\u001b[39m\u001b[38;5;124m'\u001b[39m) ) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)        \n\u001b[1;32m     74\u001b[0m     X_tensor_test \u001b[38;5;241m=\u001b[39m (torch\u001b[38;5;241m.\u001b[39mTensor(np\u001b[38;5;241m.\u001b[39mload(data_path\u001b[38;5;241m+\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/red\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mred\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/test/input.npy\u001b[39m\u001b[38;5;124m'\u001b[39m) ) \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m100\u001b[39m)\u001b[38;5;241m.\u001b[39mto(device)        \n",
+      "File \u001b[0;32m~/miniconda3/envs/proy/lib/python3.12/site-packages/numpy/lib/npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    425\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    426\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 427\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    428\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/red118/train/input.npy'"
+     ]
     }
    ],
    "source": [
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,9 +324,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x_tot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m      9\u001b[0m gap_percentages_hist_v1 \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     12\u001b[0m percent_gap \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m \u001b[38;5;66;03m## GAPS PARA TOLERANCIA MAXIMA\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(\u001b[43mx_tot\u001b[49m)[\u001b[38;5;241m0\u001b[39m]):\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;66;03m# Cargar entradas\u001b[39;00m\n\u001b[1;32m     16\u001b[0m     net\u001b[38;5;241m.\u001b[39mload\u001b[38;5;241m.\u001b[39mloc[:,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp_mw\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m x_tot[idx,idx_load,\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m     17\u001b[0m     net\u001b[38;5;241m.\u001b[39mload\u001b[38;5;241m.\u001b[39mloc[:,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq_mvar\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m x_tot[idx,idx_load,\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x_tot' is not defined"
+     ]
+    }
+   ],
    "source": [
     "idx_gens = net.gen.bus.values.astype(int)\n",
     "idx_load = net.load.bus.values.astype(int)\n",
